--- a/Project-01/assets/css/style.css
+++ b/Project-01/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /* navbar */
 
 .logo {
@@ -7,31 +6,27 @@
 .butn {
   background-color: #ff1300;
   box-shadow: rgb(168, 29, 29) 4px 4px 0px;
-  transition: .3s ease-out;
+  transition: 0.3s ease-out;
   /* transition: transform 200ms, box-shadow 200ms; */
-  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-   7px 7px 20px 0px rgba(0,0,0,.1),
-   4px 4px 5px 0px rgba(0,0,0,.1);
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
   outline: none;
 }
-/* .butn:active {
-  transform: translateY(4px) translateX(4px);
-  box-shadow: rgb(168, 29, 29) 0px 0px 0px;
-} */
+
 .butn:hover {
   background: rgb(177, 31, 31);
-  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-              -4px -4px 6px 0 rgba(116, 125, 136, .2), 
-    inset -4px -4px 6px 0 rgba(255,255,255,.5),
-    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5),
+    -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
+    inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
   color: #fff;
 }
 
 .butn:hover:after {
-  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-              -4px -4px 6px 0 rgba(116, 125, 136, .2), 
-    inset -4px -4px 6px 0 rgba(255,255,255,.5),
-    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5),
+    -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
+    inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -45,14 +40,16 @@
   position: relative;
 }
 .nav-link::after {
-  content: '';
+  content: "";
   position: absolute;
-  left: 0; bottom: 0;
-  width: 100%; height: 2px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
   background-color: rgba(56, 169, 21, 0.9);
   transform: scaleX(0);
   transform-origin: right;
-  transition: transform .7s;
+  transition: transform 0.7s;
 }
 .nav-link:hover::after {
   transform: scaleX(1);
@@ -63,18 +60,10 @@
 }
 
 #header {
- 
   transition: all 0.5s;
   z-index: 997;
-  /* padding: 15px 0; */
-  /* top: 40px; */
 }
-/* .m-left1 {
-  margin-left: 120px;
-}
-.m-left2 {
-  margin-left: 100px;
-} */
+
 .navbar-logo {
   margin-left: 60px;
 }
@@ -107,21 +96,17 @@
 }
 .hamburger-steps .hamburger-line:nth-child(2) {
   width: 80%;
-  
 }
 .hamburger-steps .hamburger-line:last-child {
   width: 55%;
-  
 }
-
-
 
 .hamburger-steps:hover .hamburger-line {
   width: 100%;
 }
 
 .hamburger--active.hamburger-steps .hamburger-line {
-  transition:none;
+  transition: none;
   width: 100%;
 }
 
@@ -141,22 +126,19 @@
   transform: rotate(45deg);
 }
 .navbar-light .navbar-toggler {
-  
   border-color: #fcd232;
 }
 
 @media (max-width: 425px) {
-  
-  
   .nav-fullscreen-item a {
     text-decoration: none;
     color: white;
     transition: color 0.1s ease-in-out;
   }
   .nav-fullscreen-item a:hover {
-    color: #CCCCCC;
+    color: #cccccc;
   }
-  
+
   .nav-fullscreen {
     position: fixed;
     display: flex;
@@ -169,9 +151,8 @@
     visibility: hidden;
     justify-content: center;
     align-items: center;
-    background-color: #302F38;
+    background-color: #302f38;
     transition: opacity 0s;
-    
   }
   .nav-fullscreen--open {
     opacity: 1;
@@ -181,29 +162,24 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    /* text-align: center; */
-    font-size:20px;
+
+    font-size: 20px;
     line-height: 45px;
   }
-  
+
   .navbar-light .navbar-nav .nav-link {
     color: white;
     font-weight: bold;
+  }
 }
-  
-}
-
-
-
 
 /* // vraboti nash student// */
 
- .hidden {
+.hidden {
   display: none;
 }
 
-
- .contact {
+.contact {
   background-color: #fcd232;
 }
 .section-title {
@@ -266,9 +242,8 @@ option {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
-  
+
   border: none;
-  
 }
 .contact .php-email-form input::-moz-placeholder,
 .contact .php-email-form textarea::-moz-placeholder {
@@ -318,14 +293,19 @@ option {
   100% {
     transform: rotate(360deg);
   }
-} 
+}
 
 /* hero */
 
 #hero {
   width: 100%;
-  /* height: 100vh; */
-  background: linear-gradient(45deg, rgba(61, 97, 65, 0.9) 0%, rgba(56, 169, 21, 0.9) 100%), url("../Design/bg-hero.jpg") center center no-repeat;
+
+  background: linear-gradient(
+      45deg,
+      rgba(61, 97, 65, 0.9) 0%,
+      rgba(56, 169, 21, 0.9) 100%
+    ),
+    url("../Design/bg-hero.jpg") center center no-repeat;
   background-size: cover;
   height: 500px;
 }
@@ -342,7 +322,8 @@ option {
   #hero {
     text-align: center;
   }
-  #hero .container, #hero .container-fluid {
+  #hero .container,
+  #hero .container-fluid {
     padding-top: 68px;
   }
   #hero .animated {
@@ -359,8 +340,6 @@ option {
 @media (max-width: 768px) {
   #hero h1 {
     font-size: 70px;
-   
-    
   }
   #hero h2 {
     font-size: 18px;
@@ -402,67 +381,37 @@ option {
   }
 }
 
-
 /* filters */
 
 .filters {
   border: 1px solid yellowgreen;
 }
 
-/* .filters i {
-  visibility: hidden;
-} */
-
-/* .filters i {
-  display: none;
-} */
-
-/* .filters:focus {
-  background-color: rgb(168, 29, 29);
-  color: #302F38;
-} */
-
 .filters:hover {
   background: rgb(168, 29, 29);
   transition: 0.3s ease-out;
-  
 }
 .filters,
-label, input:hover {
-  cursor:pointer;
+label,
+input:hover {
+  cursor: pointer;
 }
 
 /* Hide the default checkbox */
-input[type=checkbox] {
+input[type="checkbox"] {
   visibility: hidden;
 }
 
-/* .filters:focus {
-  background-color:yellow;
-} */
-/* .filters:active{
-  background-color:green;
-} */
-
-/* .check {
-position: relative;
-} */
-/* .check:hover p {
-  color: #ff1300 !important;
-} */
 .checkbox {
   visibility: hidden;
   position: absolute;
- 
-  
 }
 .checkbox:checked ~ label > div > .fa-check-circle {
   visibility: visible;
-  color: #302F38 !important;
-  
+  color: #302f38 !important;
 }
 .checkbox:checked ~ label > div > p {
-  color:  #302F38 !important;
+  color: #302f38 !important;
 }
 .checkbox:checked ~ label {
   background-color: rgb(168, 29, 29);
@@ -470,8 +419,6 @@ position: relative;
 .fa-check-circle {
   visibility: hidden;
 }
-
-
 
 /* cards */
 
@@ -488,28 +435,20 @@ position: relative;
 }
 .gallery .gallery-item {
   overflow: hidden;
- 
 }
-.gallery .gallery-item  {
-  transition: all ease-in-out .3s;
+.gallery .gallery-item {
+  transition: all ease-in-out 0.3s;
 }
-.gallery .gallery-item:hover  {
+.gallery .gallery-item:hover {
   transform: scale(1.1);
 }
 
-
-
-/* load more button */
-
-
- 
 .list {
   margin: 0px auto;
   width: 80%;
   box-sizing: border-box;
 }
 .list-element {
-  
   display: none;
 }
 
@@ -573,5 +512,3 @@ position: relative;
 .list .list-element:nth-child(20) {
   display: block;
 }
-
- 
