bugs and errors fixed, one button on student.html needs to be fixed

--- a/Project-01/assets/css/style.css
+++ b/Project-01/assets/css/style.css
@@ -57,6 +57,7 @@
 }
 .bg-yellow {
   background-color: #fcd232;
+  overflow: hidden;
 }
 
 #header {
@@ -181,6 +182,7 @@
 
 .contact {
   background-color: #fcd232;
+  min-height: 88vh;
 }
 .section-title {
   padding-top: 100px;
@@ -263,9 +265,9 @@ option {
 .contact .php-email-form textarea {
   padding: 10px 12px;
 }
-.mb {
+/* .mb {
   margin-bottom: 190px;
-}
+} */
 .contact .php-email-form button[type="submit"] {
   background: red;
   border: 0;
@@ -421,7 +423,9 @@ input[type="checkbox"] {
 }
 
 /* cards */
-
+.card {
+  margin-bottom: 13px;
+}
 .dep {
   border: 1px solid yellow;
   background-color: #fcd232;
